# glcltest

./: .gitignore  CMakeLists.txt
src/: cl.c  cl_buffer.h  cl_error.h  clu.h  compute.h  gl.h  glfw-imgui.cc  glfw-imgui.h  kernel.cl  linmath.h  main.c  main.cc  mouse.h  orbit-camera.h  phase_output.h  phase_raster_obb.h  vec.h
